fdo#48345 need to refresh row also when not m_bRowCountFinal