dbaccess/source/core/api/KeySet.cxx
@@ -1108,14 +1108,9 @@ sal_Bool SAL_CALL OKeySet::next(  ) throw(SQLException, RuntimeException)
     if(!m_bRowCountFinal) // not yet all records fetched
     {
         ++m_aKeyIter; // this is possible because we stand on begin() and this is the "beforefirst" row
+                      // LEM: above comment is wrong; we may be anywhere but after last.
         if(m_aKeyIter == m_aKeyMap.end() && !fetchRow())
             m_aKeyIter = m_aKeyMap.end();
-        else
-        {
-            //m_aKeyIter->second.second.second = new OPrivateRow(_rInsertRow->get());
-            m_xRow.set(m_xDriverRow,UNO_QUERY_THROW);
-            return !isAfterLast();
-        }
     }
     else if(!isAfterLast())
         ++m_aKeyIter;
